welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
	return vuBiscuit = true
                         ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
	for ( i <- 1 to  6 ) { 
                ^